2010-03-30  Atsushi Enomoto  <atsushi@ximian.com>

	* FaultConverter.cs : check envelope version, not addressing version.

2010-03-29  Atsushi Enomoto  <atsushi@ximian.com>

	* FaultConverter.cs : implemented TryCreateException().

2010-03-29  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageFault.cs : cosmetic method name clarification.

2010-03-29  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlReaderBodyWriter.cs, Message.cs, MessageImpl.cs, BodyWriter.cs:
	  fix BodyWriter buffering that dropped in-scope namespaces and thus
	  caused problem on resolving QNames.

2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* FaultConverter.cs : do implement OnTryCreateFaultMessage() to work
	  with certain Exception types.

2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* Message.cs : fix explanation on CreateMessage() overloads.

2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageFault.cs : Write Subcode element correctly and fix wrong
	  Code/Value/Subcode element relationship. Give better error message.

2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpRequestChannel.cs : ok, no need for conditional code path.

2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* AddressingVersion.cs : add fault action namespace.

2010-03-26  Sebastien Pouliot  <sebastien@ximian.com>

	* HttpRequestChannel.cs: There is no WebHeaderCollection.Add 
	method in SL API

2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageImpl.cs : pass IsFault argument in OnCreateBufferedCopy().

2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpRequestContext.cs, AspNetRequestContext.cs : return HTTP 500
	  for fault message.

2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpRequestChannel.cs : create HttpResponseMessageProperty.

2010-03-25  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpRequestContext.cs : removed HTTP status rewriting for
	  commented reason.

2010-03-25  Atsushi Enomoto  <atsushi@ximian.com>
