@@ -1,3 +1,8 @@
+2010-04-01  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* ServiceHostBaseTest.cs : enable RunDestinationUnreachableTest()
+	  and add another case for different addressing version.
+
 2010-03-29  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* EndpointIdentityTest.cs, EndpointAddress10Test.cs :
